# monoio

./: .gitignore  CONTRIBUTING-zh.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README-zh.md  README.md  SECURITY.md  deny.toml  release-plz.toml  rustfmt.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/resources/benchmark/: raw_data.txt
.github/workflows/: cargo-deny.yml  ci.sh  ci.yml  coverage.yml  pr-audit.yml  release.yml
docs/en/: async-communicate.md  benchmark.md  comparing-with-others.md  compatiable-with-tokio-eco.md  configuration.md  how-integrate-with-tower.md  how-intergrate-with-tower.md  http.md  io-cancel.md  memlock.md  platform-support.md  poll-io.md  use-legacy-driver.md  why-GAT.md  why-async-rent.md
docs/zh/: async-communicate.md  benchmark.md  comparing-with-others.md  compatiable-with-tokio-eco.md  configuration.md  how-integrate-with-tower.md  http.md  io-cancel.md  memlock.md  platform-support.md  poll-io.md  use-legacy-driver.md  why-GAT.md  why-async-rent.md
examples/: Cargo.toml  accept.rs  builder.rs  busy_loop.rs  busy_polling.rs  channel.rs  connect.rs  echo.rs  echo_poll.rs  echo_tfo.rs  h2_client.rs  h2_server.rs  hyper.rs  hyper_client.rs  hyper_server.rs  join.rs  macro.rs  proxy.rs  tcp.rs  tcp_legacy.rs  tcp_uring.rs  timer.rs  timer_select.rs  uds.rs
examples/tokio-io-compat/: Cargo.toml
examples/tokio-io-compat/src/: main.rs
monoio/: Cargo.toml  LICENSE-MIT  LICENSE-THIRD-PARTY  README.md
monoio-compat/: Cargo.toml  README.md
monoio-compat/src/: box_future.rs  buf.rs  futures_stream.rs  hyper.rs  lib.rs  safe_wrapper.rs  tcp.rs  tcp_safe.rs  tcp_unsafe.rs
monoio-macros/: Cargo.toml  LICENSE-THIRD-PARTY  README.md
monoio-macros/src/: entry.rs  lib.rs  select.rs  test.rs
monoio/src/: blocking.rs  builder.rs  lib.rs  runtime.rs  scheduler.rs  scoped.rs
monoio/src/buf/: io_buf.rs  io_vec_buf.rs  mod.rs  msg.rs  raw_buf.rs  shared_buf.rs  slice.rs  slice_mut.rs  vec_wrapper.rs
monoio/src/driver/: accept.rs  close.rs  connect.rs  consts.rs  fsync.rs  lifecycle.rs  mod.rs  op.rs  open.rs  oppool.rs  poll.rs  read.rs  ready.rs  recv.rs  scheduled_io.rs  send.rs  shared_fd.rs  thread.rs  util.rs  write.rs
monoio/src/driver/iocp/: afd.rs  event.rs  mod.rs  state.rs  waker.rs
monoio/src/driver/legacy/: mod.rs  ready.rs  scheduled_io.rs  waker.rs
monoio/src/driver/legacy/iocp/: afd.rs  core.rs  event.rs  iocp.rs  mod.rs  state.rs  waker.rs
monoio/src/driver/op/: accept.rs  bind.rs  close.rs  connect.rs  fsync.rs  listen.rs  mkdir.rs  open.rs  poll.rs  read.rs  recv.rs  rename.rs  send.rs  socket.rs  splice.rs  statx.rs  symlink.rs  unlink.rs  write.rs
monoio/src/driver/oppool/: accept.rs
monoio/src/driver/uring/: lifecycle.rs  mod.rs
monoio/src/driver/uring_fixed/: lifecycle.rs  mod.rs  waker.rs
monoio/src/fs/: create_dir.rs  dir_builder.rs  file.rs  file_type.rs  metadata.rs  mod.rs  open_options.rs  permissions.rs  symlink.rs
monoio/src/fs/dir_builder/: mod.rs  unix.rs  windows.rs
monoio/src/fs/file/: mod.rs  unix.rs  windows.rs
monoio/src/fs/metadata/: mod.rs  unix.rs
monoio/src/io/: as_fd.rs  async_buf_read.rs  async_buf_read_ext.rs  async_fd.rs  async_read_rent.rs  async_read_rent_ext.rs  async_rent_cancelable.rs  async_rent_cancelable_ext.rs  async_write_rent.rs  async_write_rent_ext.rs  mod.rs  splice.rs
monoio/src/io/sink/: mod.rs  sink_ext.rs
monoio/src/io/stream/: iter.rs  mod.rs  stream_ext.rs
monoio/src/io/util/: buf_reader.rs  buf_writer.rs  cancel.rs  copy.rs  mod.rs  prefixed_io.rs  split.rs
monoio/src/macros/: debug.rs  join.rs  mod.rs  pin.rs  scoped_tls.rs  select.rs  support.rs  try_join.rs
monoio/src/net/: listener_config.rs  listenr_config.rs  mod.rs  udp.rs
monoio/src/net/tcp/: listener.rs  mod.rs  split.rs  stream.rs  stream_poll.rs
monoio/src/net/tcp/tfo/: linux.rs  macos.rs  mod.rs
monoio/src/net/unix/: listener.rs  mod.rs  pipe.rs  socket_addr.rs  split.rs  stream.rs  stream_poll.rs  ucred.rs
monoio/src/net/unix/datagram/: mod.rs
monoio/src/net/unix/seq_packet/: listener.rs  mod.rs
monoio/src/stream/: iter.rs  mod.rs  stream_ext.rs
monoio/src/task/: core.rs  harness.rs  join.rs  mod.rs  raw.rs  state.rs  utils.rs  waker.rs  waker_fn.rs  yield_now.rs
monoio/src/time/: clock.rs  error.rs  instant.rs  interval.rs  mod.rs  timeout.rs
monoio/src/time/driver/: entry.rs  handle.rs  mod.rs  sleep.rs
monoio/src/time/driver/wheel/: level.rs  mod.rs
monoio/src/utils/: bind_to_cpu_set.rs  box_into_inner.rs  ctrlc.rs  linked_list.rs  mod.rs  rand.rs  slab.rs  thread_id.rs  uring_detect.rs
monoio/tests/: async_fd.rs  async_read_rent_mut_slice.rs  async_write_rent_boxed.rs  async_write_rent_cursor.rs  buf_reader.rs  buf_writter.rs  ctrlc_legacy.rs  ctrlc_uring.rs  fd_leak.rs  fs_create_dir.rs  fs_file.rs  fs_file_asyncify.rs  fs_metadata.rs  fs_read.rs  fs_rename.rs  fs_symlink.rs  fs_unlink.rs  tcp_accept.rs  tcp_connect.rs  tcp_echo.rs  tcp_into_split.rs  tcp_split.rs  udp.rs  uds_cred.rs  uds_split.rs  uds_stream.rs  unix_datagram.rs  unix_seqpacket.rs  zero_copy.rs
