[package]
edition = "2021"
name = "monoio-examples"
publish = false
version = "0.0.0"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead. In additional, if you want to know how runtime
# works, you can enable "debug" feature.
[dev-dependencies]
monoio = {path = "../monoio", features=["sync", "utils", "bytes", "macros"]}

local-sync = "0.0.4"
pin-project-lite = "0.2"
futures = "0.3"

[[example]]
name = "builder"
path = "builder.rs"

[[example]]
name = "connect"
path = "connect.rs"

[[example]]
name = "uds"
path = "uds.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "join"
path = "join.rs"

[[example]]
name = "timer"
path = "timer.rs"

[[example]]
name = "timer-select"
path = "timer_select.rs"

[[example]]
name = "macro"
path = "macro.rs"

[[example]]
name = "channel"
path = "channel.rs"

[[example]]
name = "proxy"
path = "proxy.rs"
