[package]
edition = "2021"
license = "MIT/Apache-2.0"
name = "monoio-examples"
publish = false
version = "0.0.0"

# If you copy one of the examples into a new project, you should be using
# [dependencies] instead. In additional, if you want to know how runtime
# works, you can enable "debug" feature.
[dev-dependencies]
monoio = {path = "../monoio", default-features = false, features = ["async-cancel", "sync", "bytes", "iouring", "legacy", "macros", "utils"]}

# Enable tracing and tracing-subscriber for print out runtime debug
# tracing information. Add these only when you enable "debug" feature.
# tracing = "0.1"
# tracing-subscriber = "0.3"

# For hyper examples
hyper = {version = "0.14", features = ["http1", "client", "server", "stream"]}

# For h2 examples
bytes = {version = "1"}
h2 = {version = "0.3"}
http = {version = "0.2"}

# For hyper and h2 examples
monoio-compat = {path = "../monoio-compat"}

tokio = {version = "1", default-features = false, features = ["io-util"]}
tower-service = "0.3"

futures = "0.3"
local-sync = "0.0.5"
pin-project-lite = "0.2"

[[example]]
name = "accept"
path = "accept.rs"

[[example]]
name = "builder"
path = "builder.rs"

[[example]]
name = "tcp_legacy"
path = "tcp_legacy.rs"

[[example]]
name = "tcp_uring"
path = "tcp_uring.rs"

[[example]]
name = "uds"
path = "uds.rs"

[[example]]
name = "echo"
path = "echo.rs"

[[example]]
name = "join"
path = "join.rs"

[[example]]
name = "timer"
path = "timer.rs"

[[example]]
name = "timer-select"
path = "timer_select.rs"

[[example]]
name = "macro"
path = "macro.rs"

[[example]]
name = "channel"
path = "channel.rs"

[[example]]
name = "proxy"
path = "proxy.rs"

[[example]]
name = "hyper-server"
path = "hyper_server.rs"

[[example]]
name = "hyper-client"
path = "hyper_client.rs"

[[example]]
name = "h2-server"
path = "h2_server.rs"

[[example]]
name = "h2-client"
path = "h2_client.rs"
