[package]
authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous"]
description = "Monoio proc macros."
edition = "2021"
keywords = ["runtime", "iouring", "async"]
license = "MIT/Apache-2.0"
name = "monoio-macros"
readme = "README.md"
repository = "https://github.com/bytedance/monoio"
version = "0.1.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1"
syn = { version = "2.0", features = ["full"] }
