[package]
authors = ["ChiHai <ihciah@gmail.com>", "XuShuai <dyxushuai@gmail.com>"]
categories = ["asynchronous", "network-programming"]
description = "A thread per core runtime based on iouring."
edition = "2021"
keywords = ["runtime", "iouring", "async"]
license = "MIT/Apache-2.0"
name = "monoio"
readme = "README.md"
repository = "https://github.com/bytedance/monoio"
version = "0.0.7"

# common dependencies
[dependencies]
monoio-macros = {version = "0.0.3", path = "../monoio-macros", optional = true}

fxhash = "0.2"
libc = "0.2"
pin-project-lite = "0.2"
scoped-tls = "1"
socket2 = {version = "0.4", features = ["all"]}

bytes = {version = "1", optional = true}
flume = {version = "0.10", optional = true}
mio = {version = "0.8", features = [
  "net",
  "os-poll",
  "os-ext",
], optional = true}
tracing = {version = "0.1", default-features = false, features = [
  "std",
], optional = true}

# windows dependencies
[target.'cfg(windows)'.dependencies]
windows = {version = "0.39.0", features = [
  "Data_Xml_Dom",
  "Win32_Foundation",
  "Win32_Security",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging",
]}

# unix dependencies
[target.'cfg(unix)'.dependencies]
nix = {version = "0.24", optional = true}

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = {version = "0.5", features = ["unstable"]}

[dev-dependencies]
futures = "0.3"
local-sync = "0.0.5"
tempfile = "3.2"

[features]
# async-cancel will push a async-cancel entry into sq when op is canceled
async-cancel = []
# enanle zero copy(enable SOCK_ZEROCOPY + MSG_ZEROCOPY flag)
# WARNING: this feature may cause performance degradation
zero-copy = []
# splice op(require kernel 5.7+)
splice = []
# enable `async main` macros support
macros = ["monoio-macros"]
# allow waker to be sent across threads
sync = ["flume"]
# enable bind cpu set
utils = ["nix"]
# enable debug if you want to know what runtime does
debug = ["tracing"]
# enable legacy driver support(will make monoio available for older kernel and macOS)
legacy = ["mio"]
# iouring support
iouring = []
# by default both iouring and legacy are enabled
default = ["async-cancel", "bytes", "iouring", "legacy", "macros", "utils"]
